--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,27 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
-  build-java:
+  build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
-
-    - name: Grant execute permission for gradlew
+        java-version: '11'
+        distribution: 'temurin'
+    - name: Grant excution permition for Gradle 
       run: chmod +x gradlew
-
-    - name: Build with Gradle
+    - name: Buid with Gradle
       run: ./gradlew build
-
-#     - name: Build and Push Docker Image
-#       uses: mr-smithers-excellent/docker-build-push@v4
-#       with:
-#         image: nanajanashia/demo-app
-#         registry: docker.io
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
-         
